@@ -13,8 +13,8 @@ import java.util.stream.Collectors;
 
 /**
  * "Form 2" — native SQL aggregation across {@code form058} and {@code
- * form058_1} for the social/occupation composition report, over an arbitrary
- * caller-supplied {@code [fromInclusive, toExclusive)} range. Mirrors {@code
+ * form058_1}, filtered by a caller-supplied set of MKB-10 codes over an
+ * arbitrary {@code [fromInclusive, toExclusive)} range. Mirrors {@code
  * Form1ReportRepository}: a single Criteria-API query can't span two
  * unrelated entity roots, so this UNIONs both tables' rows first — each
  * branch pre-filtered on sender/status/created_at so the planner can use
@@ -23,16 +23,14 @@ import java.util.stream.Collectors;
  * aggregates every bucket with Postgres {@code count(*) filter (where ...)}
  * in a single pass over the already-narrowed row set. No per-row data
  * (patient identity, diagnosis text, etc.) ever leaves the database — only
- * the final small numeric aggregate does, keeping this report O(1) in JVM
- * heap regardless of how many cases matched.
+ * the final small numeric aggregate does, keeping this O(1) in JVM heap
+ * regardless of how many cases matched.
  * <p>
  * Grouped/filtered by {@code sender_organization_id} — the institution that
  * <b>created</b> the case ("createdOrg") — not {@code
  * receiver_organization_id} (always the SANEPID_SERVICE branch that
- * processes the case, never the actual medical institution), so the
- * district-level breakdown lists every institution (muassasa) with its own
- * count instead of only the SES branch. See {@code Form1ReportRepository}
- * for the full rationale.
+ * processes the case, never the actual medical institution). See {@code
+ * Form1ReportRepository} for the full rationale.
  * <p>
  * {@code organizationIds} is spliced into the SQL text as a literal {@code
  * VALUES} list joined against, not filtered via {@code IN}/{@code =
@@ -42,11 +40,9 @@ import java.util.stream.Collectors;
  * selective index condition, ~60x slower in testing).
  * <p>
  * Only PRIMARY (not yet resolved) notifications are counted here — {@code
- * status NOT IN ('APPROVED', 'CANCELED')} — matching the report's own title
- * ("Birlamchi shoshilinch xabarnomalar bo'yicha ro'yxatga olingan bemorlar
- * soni"); unlike Form 1 there is no confirmed/primary split. Category
- * buckets are {@code patient.category_code} against the {@code ref_catalog}
- * {@code CATEGORY} type (see {@code Form2OrganizationCountProjection}).
+ * status NOT IN ('APPROVED', 'CANCELED')}. Category buckets are {@code
+ * patient.category_code} against the {@code ref_catalog} {@code CATEGORY}
+ * type (see {@code Form2OrganizationCountProjection}).
  * <p>
  * Every {@code ::type} cast below wraps its named parameter in parentheses
  * — {@code (:param)::type}, never {@code :param::type} — see {@code
@@ -56,26 +52,6 @@ import java.util.stream.Collectors;
 @Repository
 @RequiredArgsConstructor
 public class Form2ReportRepository {
-
-    private static final String UNION_SOURCE_TEMPLATE = """
-            select f.sender_organization_id, p.category_code
-            from form058 f
-            join patient p on p.id = f.patient_id
-            join (values %1$s) as scope_org(id) on scope_org.id = f.sender_organization_id
-            where f.deleted = false
-              and f.status not in ('APPROVED', 'CANCELED')
-              and f.created_at >= (:fromInclusive)::timestamptz and f.created_at < (:toExclusive)::timestamptz
-              and ((:diagnosisCode)::text is null or f.mkb10_code = (:diagnosisCode)::text or f.final_mkb10_code = (:diagnosisCode)::text)
-            union all
-            select f.sender_organization_id, p.category_code
-            from form058_1 f
-            join patient p on p.id = f.patient_id
-            join (values %1$s) as scope_org(id) on scope_org.id = f.sender_organization_id
-            where f.deleted = false
-              and f.status not in ('APPROVED', 'CANCELED')
-              and f.created_at >= (:fromInclusive)::timestamptz and f.created_at < (:toExclusive)::timestamptz
-              and ((:diagnosisCode)::text is null or f.mkb10_code = (:diagnosisCode)::text or f.final_mkb10_code = (:diagnosisCode)::text)
-            """;
 
     private static final String AGGREGATE_COLUMNS = """
             count(*)                                                       as total,
@@ -91,15 +67,13 @@ public class Form2ReportRepository {
             """;
 
     /**
-     * Same shape as {@link #UNION_SOURCE_TEMPLATE} but filters by a set of
-     * MKB-10 codes ({@code in (:mkb10Codes)}) instead of a single optional
-     * exact match — used by {@code Form2ManualEntryQueryService} to count
-     * only the diagnoses belonging to whichever {@code ManualReport}
-     * entries are tagged for "Shakl №2". A plain {@code in (:param)} bind is
-     * fine here (unlike {@code organizationIds} above): the set is a
-     * handful of disease codes, never anywhere near the ~1000-row scale
-     * that made {@code = any(...)}/{@code IN} problematic for organization
-     * ids.
+     * Filters by a set of MKB-10 codes ({@code in (:mkb10Codes)}) — used by
+     * {@code Form2ManualEntryQueryService} to count only the diagnoses
+     * belonging to whichever {@code ManualReport} entries are tagged for
+     * "Shakl №2". A plain {@code in (:param)} bind is fine here (unlike
+     * {@code organizationIds} above): the set is a handful of disease
+     * codes, never anywhere near the ~1000-row scale that made {@code =
+     * any(...)}/{@code IN} problematic for organization ids.
      */
     private static final String UNION_SOURCE_MKB10_TEMPLATE = """
             select f.sender_organization_id, p.category_code
@@ -148,7 +122,7 @@ public class Form2ReportRepository {
         List<?> rows = query.getResultList();
         return rows.isEmpty()
                 ? Form2OrganizationCountProjection.empty(null)
-                : toProjection((Object[]) rows.get(0), false);
+                : toProjection((Object[]) rows.getFirst(), false);
     }
 
     private String totalMkb10Sql(List<Long> organizationIds) {
@@ -158,75 +132,6 @@ public class Form2ReportRepository {
     private String unionMkb10Source(List<Long> organizationIds) {
         String valuesList = organizationIds.stream().map(id -> "(" + id + ")").collect(Collectors.joining(","));
         return UNION_SOURCE_MKB10_TEMPLATE.formatted(valuesList);
-    }
-
-    /** One aggregate row per organization id — for a region/district/organization-level breakdown. */
-    public List<Form2OrganizationCountProjection> countGroupedByOrganization(
-            List<Long> organizationIds,
-            Instant fromInclusive,
-            Instant toExclusive,
-            String diagnosisCode
-    ) {
-        if (organizationIds == null || organizationIds.isEmpty()) {
-            return List.of();
-        }
-
-        Query query = bindParameters(
-                entityManager.createNativeQuery(groupedSql(organizationIds)), fromInclusive, toExclusive, diagnosisCode
-        );
-
-        List<?> rows = query.getResultList();
-        return rows.stream().map(row -> toProjection((Object[]) row, true)).toList();
-    }
-
-    /**
-     * A single, unattributed total row across every given organization id —
-     * for the report's root node.
-     */
-    public Form2OrganizationCountProjection countTotal(
-            List<Long> organizationIds,
-            Instant fromInclusive,
-            Instant toExclusive,
-            String diagnosisCode
-    ) {
-        if (organizationIds == null || organizationIds.isEmpty()) {
-            return Form2OrganizationCountProjection.empty(null);
-        }
-
-        Query query = bindParameters(
-                entityManager.createNativeQuery(totalSql(organizationIds)), fromInclusive, toExclusive, diagnosisCode
-        );
-
-        List<?> rows = query.getResultList();
-        return rows.isEmpty()
-                ? Form2OrganizationCountProjection.empty(null)
-                : toProjection((Object[]) rows.get(0), false);
-    }
-
-    private String unionSource(List<Long> organizationIds) {
-        String valuesList = organizationIds.stream().map(id -> "(" + id + ")").collect(Collectors.joining(","));
-        return UNION_SOURCE_TEMPLATE.formatted(valuesList);
-    }
-
-    private String groupedSql(List<Long> organizationIds) {
-        return "select t.sender_organization_id as organization_id, " + AGGREGATE_COLUMNS
-                + " from (" + unionSource(organizationIds) + ") t group by t.sender_organization_id";
-    }
-
-    private String totalSql(List<Long> organizationIds) {
-        return "select " + AGGREGATE_COLUMNS + " from (" + unionSource(organizationIds) + ") t";
-    }
-
-    private Query bindParameters(
-            Query query,
-            Instant fromInclusive,
-            Instant toExclusive,
-            String diagnosisCode
-    ) {
-        return query
-                .setParameter("fromInclusive", fromInclusive)
-                .setParameter("toExclusive", toExclusive)
-                .setParameter("diagnosisCode", diagnosisCode);
     }
 
     private Form2OrganizationCountProjection toProjection(Object[] row, boolean hasOrganizationId) {
